--- a/src/libs/styles/responsive.css
+++ b/src/libs/styles/responsive.css
@@ -102,7 +102,8 @@
     border-radius: 5px;
     margin-right: 8px;
   }
-  .home-slider .swiper-button-prev, .home-slider .swiper-button-next {
+  .home-slider .swiper-button-prev,
+  .home-slider .swiper-button-next {
     display: none;
   }
   .home-slider .swiper-pagination {
@@ -269,7 +270,8 @@
     font-size: 22px;
     margin-bottom: 16px;
   }
-  .video-wrap .nav-pills .nav-link.active, .video-wrap .nav-pills .show > .nav-link {
+  .video-wrap .nav-pills .nav-link.active,
+  .video-wrap .nav-pills .show > .nav-link {
     border-top: 2px solid #4d93e9;
   }
   .video-wrap .video-nav .video-nav-item {
@@ -692,7 +694,8 @@
   }
   /*-- End Welcome --*/
   /*-- Video --*/
-  .video-wrap-two .nav-pills .nav-link.active, .video-wrap .nav-pills .show > .nav-link {
+  .video-wrap-two .nav-pills .nav-link.active,
+  .video-wrap .nav-pills .show > .nav-link {
     border-top: 0;
   }
   .video-wrap-two .video-nav .video-nav-item a {
@@ -793,7 +796,11 @@
   .appointment-item-two-right .appointment-item-content .content-one ul li {
     font-size: 13px;
   }
-  .appointment-item-two-right .appointment-item-content .content-one ul li:before {
+  .appointment-item-two-right
+    .appointment-item-content
+    .content-one
+    ul
+    li:before {
     width: 20px;
     left: 84px;
   }
@@ -1159,7 +1166,11 @@
     line-height: 35px !important;
     font-size: 20px !important;
   }
-  .testimonial-area .testimonial-wrap .testimonial-slider .testimonial-item img {
+  .testimonial-area
+    .testimonial-wrap
+    .testimonial-slider
+    .testimonial-item
+    img {
     width: 100px;
     height: 100px;
     margin-bottom: 25px;
@@ -1299,7 +1310,11 @@
     font-size: 22px;
     margin-right: 10px;
   }
-  .appointment-item-two-right .appointment-item-content .content-one ul li:before {
+  .appointment-item-two-right
+    .appointment-item-content
+    .content-one
+    ul
+    li:before {
     display: none;
   }
   .appointment-item-two-right .appointment-item-content .content-two {
@@ -1711,7 +1726,8 @@
     border-bottom: 1px solid rgba(77, 147, 233, 0.3490196078);
     border-top: 3px solid transparent;
   }
-  .video-wrap .nav-pills .nav-link.active, .video-wrap .nav-pills .show > .nav-link {
+  .video-wrap .nav-pills .nav-link.active,
+  .video-wrap .nav-pills .show > .nav-link {
     border-top: 3px solid #4d93e9;
   }
   /*-- End Video --*/
@@ -1965,7 +1981,8 @@
   }
   /*-- End Speciality --*/
   /*-- Video --*/
-  .video-wrap-two .nav-pills .nav-link.active, .video-wrap .nav-pills .show > .nav-link {
+  .video-wrap-two .nav-pills .nav-link.active,
+  .video-wrap .nav-pills .show > .nav-link {
     border-top: 0;
   }
   .video-wrap-two .video-nav .video-nav-item a {
@@ -2484,7 +2501,11 @@
     font-size: 25px;
     margin-bottom: 30px;
   }
-  .testimonial-area .testimonial-wrap .testimonial-slider .testimonial-item img {
+  .testimonial-area
+    .testimonial-wrap
+    .testimonial-slider
+    .testimonial-item
+    img {
     width: 110px;
     height: 110px;
     margin-bottom: 20px;
@@ -2848,11 +2869,13 @@
     top: 0;
     max-width: 395px;
   }
-  .home-slider .swiper-button-prev, .home-slider .swiper-button-next {
+  .home-slider .swiper-button-prev,
+  .home-slider .swiper-button-next {
     width: 40px;
     height: 40px;
   }
-  .home-slider .swiper-button-prev::after, .home-slider .swiper-button-next::after {
+  .home-slider .swiper-button-prev::after,
+  .home-slider .swiper-button-next::after {
     font-size: 20px;
   }
   .main-nav nav .navbar-nav .nav-item a {
@@ -2888,11 +2911,13 @@
   }
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .home-slider .swiper-button-prev, .home-slider .swiper-button-next {
+  .home-slider .swiper-button-prev,
+  .home-slider .swiper-button-next {
     width: 40px;
     height: 40px;
   }
-  .home-slider .swiper-button-prev::after, .home-slider .swiper-button-next::after {
+  .home-slider .swiper-button-prev::after,
+  .home-slider .swiper-button-next::after {
     font-size: 20px;
   }
-}/*# sourceMappingURL=responsive.css.map */
+} /*# sourceMappingURL=responsive.css.map */
