--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,21 @@
 @import "@/libs/styles/index.css";
+
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.paginate_button {
+    margin: 0 10px;
+}
+
+.dataTables_length {
+    margin-bottom: 15px;
 }
