--- a/src/libs/styles/style.scss
+++ b/src/libs/styles/style.scss
@@ -608,7 +608,7 @@ button {
 
 /*-- Counter --*/
 .counter-bg {
-  background-image: url("/images/map-bg.png");
+  //background-image: url("/images/map-bg.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -981,7 +981,7 @@ button {
 
 /*-- Video --*/
 .video-area {
-  background-image: url("/images/intro-video-bg.jpg");
+  //background-image: url("/images/intro-video-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1364,7 +1364,7 @@ button {
 
 /*-- Footer --*/
 footer {
-  background-image: url("/images/footer-bg.png");
+  //background-image: url("/images/footer-bg.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1633,7 +1633,7 @@ footer {
 }
 
 .emergency-bg {
-  background-image: url(/images/contact-info-bg1.png);
+  //background-image: url(/images/contact-info-bg1.png);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1683,7 +1683,7 @@ footer {
 
 /*-- Welcome --*/
 .welcome-left {
-  background-image: url("/images/about3.jpg");
+  //background-image: url("/images/about3.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1831,7 +1831,7 @@ footer {
 }
 
 .speciality-right {
-  background-image: url("/images/about4.jpg");
+  //background-image: url("/images/about4.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1903,7 +1903,7 @@ footer {
 /*-- Video --*/
 .video-wrap-two {
   .video-area {
-    background-image: url("/images/home-two/7.jpg");
+    //background-image: url("/images/home-two/7.jpg");
   }
 
   .video-nav {
@@ -1948,7 +1948,7 @@ footer {
 
 /*-- Appointment --*/
 .appointment-area {
-  background-image: url("/images/appointment-bg.jpg");
+  //background-image: url("/images/appointment-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -1961,7 +1961,7 @@ footer {
   background-color: $white-color;
   padding: 80px 100px 80px;
   border-radius: 10px;
-  background-image: url("/images/home-two/home-2-hart-shape.jpg");
+  //background-image: url("/images/home-two/home-2-hart-shape.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -2396,7 +2396,7 @@ footer {
 /*-- Review Slider --*/
 .review-area {
   position: relative;
-  background-image: url("/images/feedback-bg.jpg");
+  //background-image: url("/images/feedback-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -2614,7 +2614,7 @@ footer {
 /*----- Doctor Page -----*/
 /*-- Page Title --*/
 .page-title-one {
-  background-image: url("/images/page-banner1.jpg");
+  //background-image: url("/images/page-banner1.jpg");
 }
 
 .page-title-area {
@@ -2781,7 +2781,7 @@ footer {
 /*----- Apoointment Page -----*/
 /*-- Page Title --*/
 .page-title-two {
-  background-image: url("/images/page-banner2.jpg");
+  //background-image: url("/images/page-banner2.jpg");
 }
 
 /*-- End Page Title --*/
@@ -2804,7 +2804,7 @@ footer {
 }
 
 .appointment-item-two-right {
-  background-image: url("/images/appointment1.jpg");
+  //background-image: url("/images/appointment1.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -2852,7 +2852,7 @@ footer {
 /*----- Doctor Details Page -----*/
 /*-- Page Title --*/
 .page-title-three {
-  background-image: url("/images/page-banner3.jpg");
+  //background-image: url("/images/page-banner3.jpg");
 }
 
 .page-title-item-two {
@@ -2886,10 +2886,6 @@ footer {
 /*-- End Page Title --*/
 
 /*-- Doctor Details --*/
-.doctor-details-left {
-  box-shadow: 0px 0px 10px 0px #ddd;
-  border-radius: 10px;
-}
 
 .doctor-details-item {
   margin-bottom: 30px;
@@ -3031,7 +3027,7 @@ footer {
   }
 
   .speciality-right-three {
-    background-image: url("/images/appointment1.jpg");
+    //background-image: url("/images/appointment1.jpg");
   }
 }
 
@@ -3041,7 +3037,7 @@ footer {
 /*----- Blog Details Page -----*/
 /*-- Page Title --*/
 .page-title-four {
-  background-image: url("/images/page-banner4.jpg");
+  //background-image: url("/images/page-banner4.jpg");
 }
 
 /*-- End Page Title --*/
@@ -3455,7 +3451,7 @@ footer {
 /*----- Contact Page -----*/
 /*-- Page Title --*/
 .page-title-five {
-  background-image: url("/images/page-banner3.jpg");
+  //background-image: url("/images/page-banner3.jpg");
 }
 
 /*-- End Page Title --*/
@@ -3506,7 +3502,7 @@ footer {
 
 /*-- Drop --*/
 .drop-img {
-  background-image: url("/images/contact-form-bg.png");
+  //background-image: url("/images/contact-form-bg.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -3760,7 +3756,7 @@ footer {
 /*----- TESTIMONIAL PAGE -----*/
 /*-- Testimonial --*/
 .testimonial-area {
-  background-image: url("/images/testimonial-bg.jpg");
+  //background-image: url("/images/testimonial-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -3861,7 +3857,7 @@ footer {
 /*----- SIGN UP PAGE -----*/
 /*-- Sign Up --*/
 .signup-left {
-  background-image: url("/images/signup-bg.jpg");
+  //background-image: url("/images/signup-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -3997,7 +3993,7 @@ footer {
 /*----- LOGIN PAGE -----*/
 /*-- Login --*/
 .login-left {
-  background-image: url("/images/login-bg.jpg");
+  //background-image: url("/images/login-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -4167,7 +4163,7 @@ footer {
 }
 
 .service-details-inner-left {
-  background-image: url("/images/signup-bg.jpg");
+  //background-image: url("/images/signup-bg.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -4436,7 +4432,7 @@ footer {
 
   .faq-img {
     margin-bottom: 30px;
-    background-image: url("/images/faq-main.jpg");
+    //background-image: url("/images/faq-main.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
