--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -19,3 +19,12 @@ body {
 .dataTables_length {
     margin-bottom: 15px;
 }
+
+.text-wrap {
+    display: -webkit-box;
+   -webkit-line-clamp: 2;
+   -webkit-box-orient: vertical;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   max-height: 3em;
+}
