--- a/src/libs/styles/responsive.css
+++ b/src/libs/styles/responsive.css
@@ -3566,5 +3566,10 @@
         font-size: 20px;
     }
 }
+.article{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
 
 /*# sourceMappingURL=responsive.css.map */
