--- a/src/libs/styles/responsive.scss
+++ b/src/libs/styles/responsive.scss
@@ -1275,6 +1275,7 @@ $black-color: #111111;
 
     .blog-details-recent {
       margin-bottom: 30px;
+      margin-left: 50px;
 
       h3 {
         font-size: 20px;
@@ -3132,6 +3133,7 @@ $black-color: #111111;
 
     .blog-details-recent {
       margin-bottom: 40px;
+      margin-left: 40px;
 
       h3 {
         font-weight: 600;
@@ -3809,6 +3811,7 @@ $black-color: #111111;
   /*-- Blog Details --*/
   .blog-details-item {
     .blog-details-recent {
+      margin-right: 40px;
       ul {
         li {
           padding-left: 110px;
