--- a/src/libs/styles/style.css
+++ b/src/libs/styles/style.css
@@ -4607,5 +4607,32 @@ li:first-child {
   .vacancy-card-content p strong {
     font-weight: bold;
   }
+  .header-top .dropdown-menu {
+    display: none; /* Hide the dropdown by default */
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  .header-top li:hover .dropdown-menu {
+    display: block; /* Show the dropdown on hover */
+  }
+  
+  .header-top .dropdown-menu li {
+    padding: 12px 16px;
+    text-align: left;
+  }
+  
+  .header-top .dropdown-menu li a {
+    color: black;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .header-top .dropdown-menu li a:hover {
+    background-color: #ddd;
+  }
   
 /*# sourceMappingURL=style.css.map */
