--- a/src/libs/styles/style.css
+++ b/src/libs/styles/style.css
@@ -934,7 +934,7 @@ button:focus {
 /*-- End Expertise --*/
 /*-- Video --*/
 .video-area {
-    background-image: url("/images/intro-video-bg.jpg");
+    background-color:white ;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
