--- a/src/libs/styles/meanmenu.css
+++ b/src/libs/styles/meanmenu.css
@@ -112,3 +112,34 @@
   right: 20px; /* расположение справа */
   z-index: 1000; /* устанавливаем z-index, чтобы кнопка находилась поверх других элементов */
 }
+.WhatsAppButton1 {
+  position: fixed; /* фиксированное положение */
+  bottom: 110px; 
+  width: 80px;
+  height: 80px;
+  right: 70px; /* расположение справа */
+  z-index: 1000; /* устанавливаем z-index, чтобы кнопка находилась поверх других элементов */
+}
+.appointment-button {
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 18px;
+  color: white;
+  background-color: #007BFF; /* Blue color */
+  border: none;
+  border-radius:200px;
+  text-decoration: none;
+  text-align: center;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.appointment-button:hover {
+  background-color: #0056b3;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.appointment-button:active {
+  background-color: #003f7f;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transform: translateY(2px);
+}
