--- a/src/libs/styles/style.css
+++ b/src/libs/styles/style.css
@@ -1758,10 +1758,15 @@ footer {
 .speciality-right .speciality-emergency {
     position: absolute;
     bottom: 20px;
-    left: -70px;
-    background-color: #0046c0;
-    padding: 30px 295px 25px 40px;
-    border-radius: 10px;
+    left: -240px;
+    color: white;
+    padding: 30px 100px 25px 40px;
+    border-radius: 80px;
+    border-width: 1px;
+    border-color: #db3b3b;
+    border-style: solid;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+    box-shadow: 0px 2px 5px 0px rgba(51, 51, 51, 0);
 }
 
 .speciality-right .speciality-emergency .speciality-icon {
@@ -1799,7 +1804,7 @@ footer {
     margin-bottom: 0;
     color: #ffffff;
     position: absolute;
-    right: 142px;
+    right: 70px;
     top: 56px;
 }
 
@@ -2258,7 +2263,6 @@ footer {
     width: 405px;
     height: 300px;
     z-index: -1;
-    background-color: #0046c0;
 }
 
 /*-- End Speciality --*/
